fix multi select bvox flickering  +  dynamically setting table col widths  +  moved Test Group into context  +  fixing div formatting on Home Page

--- a/src/pages/AddTest.css
+++ b/src/pages/AddTest.css
@@ -62,4 +62,5 @@ body, html {
 
   .switchButton-TestDetail {
     margin-left: 5%;
+    margin-bottom: 10px;
   }
