--- a/src/pages/TestGroupDetail.css
+++ b/src/pages/TestGroupDetail.css
@@ -1,13 +1,12 @@
 .switchButton {
-  padding-top: 80px;
+  margin-top: 70px;
   margin-left: 5%;
   display: flex;
-  padding-bottom: 20px;
   gap: 15px;
 }
 
 .pie-chart {
-  padding-top: 20px;
+  padding-top: 60px;
   margin-left: 5%;
 }
 
