--- a/src/pages/TestGroups.css
+++ b/src/pages/TestGroups.css
@@ -8,7 +8,7 @@ body, html {
   }
   
   .dateSelector {
-    padding-top: 170px;
+    padding-top: 100px;
     margin-left: 5%;
     display: flex;
     padding-bottom: 20px;
